cmake_minimum_required(VERSION 3.16)

project(covscript-curl)

option(FORCE_USE_STATIC_CURL "Force use of static libcurl" OFF)

if (DEFINED ENV{CS_DEV_PATH})
    message("-- CovScript SDK detected at $ENV{CS_DEV_PATH}")
    include("$ENV{CS_DEV_PATH}/csbuild.cmake")
    include_directories($ENV{CS_DEV_PATH}/include)
    link_directories($ENV{CS_DEV_PATH}/lib)
else ()
    message(FATAL_ERROR "-- CovScript SDK not detected. Please set environment variable CS_DEV_PATH")
endif ()

add_library(curl_ext SHARED curl.cpp)

find_package(PkgConfig QUIET)
set(USE_PKGCONFIG FALSE)
set(USE_PKGCONFIG_STATIC FALSE)

if (PkgConfig_FOUND)
    pkg_check_modules(LIBCURL QUIET libcurl)
    if (LIBCURL_FOUND)
        set(USE_PKGCONFIG TRUE)
        if (LIBCURL_STATIC_LDFLAGS AND (FORCE_USE_STATIC_CURL OR WIN32))
            message(STATUS "-- libcurl static flags found via pkg-config")
            set(USE_PKGCONFIG_STATIC TRUE)
        else ()
            # On non-Windows platforms, we prefer use the shared library flags
            message(STATUS "-- libcurl shared flags found via pkg-config")
        endif ()
    endif ()
endif ()

if (NOT USE_PKGCONFIG)
    find_package(CURL QUIET)
    if (CURL_FOUND)
        message(STATUS "-- libcurl found via find_package")
    endif ()
endif ()

target_link_libraries(curl_ext covscript)

if (USE_PKGCONFIG_STATIC)
    if (LIBCURL_STATIC_INCLUDE_DIRS)
        target_include_directories(curl_ext PRIVATE ${LIBCURL_STATIC_INCLUDE_DIRS})
    endif ()
    if (LIBCURL_STATIC_CFLAGS)
        target_compile_options(curl_ext PRIVATE ${LIBCURL_STATIC_CFLAGS})
    endif ()
    target_link_libraries(curl_ext ${LIBCURL_STATIC_LDFLAGS})
elseif (USE_PKGCONFIG)
    if (LIBCURL_INCLUDE_DIRS)
        target_include_directories(curl_ext PRIVATE ${LIBCURL_INCLUDE_DIRS})
    endif ()
    if (LIBCURL_CFLAGS)
        target_compile_options(curl_ext PRIVATE ${LIBCURL_CFLAGS})
    endif ()
    if (LIBCURL_LINK_LIBRARIES)
        target_link_libraries(curl_ext ${LIBCURL_LINK_LIBRARIES})
    else ()
        target_link_libraries(curl_ext ${LIBCURL_LDFLAGS})
    endif ()
elseif (CURL_FOUND)
    if (TARGET CURL::libcurl)
        target_link_libraries(curl_ext CURL::libcurl)
    else ()
        target_link_libraries(curl_ext ${CURL_LIBRARIES})
        if (CURL_INCLUDE_DIRS)
            target_include_directories(curl_ext PRIVATE ${CURL_INCLUDE_DIRS})
        endif ()
    endif ()
elseif (WIN32)
    set(WIN32_OS_LINK_LIBS crypt32 bcrypt wldap32 secur32 iphlpapi ws2_32)
    set(WIN32_CURL_LINK_LIBS nghttp2 ssh2 z ssl crypto brotlidec brotlicommon zstd nghttp3 ngtcp2 ngtcp2_crypto_quictls psl)
    target_compile_definitions(curl_ext PRIVATE CURL_STATICLIB)
    target_link_libraries(curl_ext curl ${WIN32_CURL_LINK_LIBS} ${WIN32_OS_LINK_LIBS})
else ()
    target_link_libraries(curl_ext curl)
endif ()

set_target_properties(curl_ext PROPERTIES OUTPUT_NAME curl)
set_target_properties(curl_ext PROPERTIES PREFIX "")
set_target_properties(curl_ext PROPERTIES SUFFIX ".cse")